# line-follower-with-camera-and-opencv

./: .gitignore  LICENSE  README.md
boffin_robot/: CMakeLists.txt  package.xml
boffin_robot/config/: gui.config
boffin_robot/launch/: display.launch.py  gazebo.launch.py  linefollower.launch.py
boffin_robot/rviz/: robot_view.rviz
boffin_robot/src/: line_follower.py
boffin_robot/urdf/: one_robot.gazebo  one_robot.xacro
boffin_robot/worlds/: empty_world.sdf  line_track_world.sdf
